# harmony_camera

./: build-profile.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
Camera/: build-profile.json5  oh-package.json5
Camera/src/main/: module.json5
Camera/src/main/ets/cameraability/: CameraAbility.ets
Camera/src/main/ets/pages/: Index.ets
Camera/src/main/ets/utils/: GlobalContext.ts  Logger.ets
Camera/src/main/resources/base/element/: string.json
Camera/src/main/resources/zh_CN/element/: string.json
Camera/src/ohosTest/: module.json5
entry/: oh-package.json5
entry/src/main/ets/pages/: Index.ets
hvigor/: hvigor-config.json5
videoCompressor/: index.ets  oh-package.json5
videoCompressor/src/main/: module.json5
videoCompressor/src/main/cpp/: CMakeLists.txt  VideoCompressor.h  napiCodec.cpp  tools.cpp  tools.h
videoCompressor/src/main/cpp/audio/decoder/: AudioDec.cpp  AudioDec.h
videoCompressor/src/main/cpp/audio/encoder/: AudioEnc.cpp  AudioEnc.h
videoCompressor/src/main/cpp/boundscheck/: CMakeLists.txt
videoCompressor/src/main/cpp/boundscheck/third_party_bounds_checking_function/: BUILD.gn  OAT.xml  README.OpenSource
videoCompressor/src/main/cpp/demuxer/: DeMuxer.cpp  DeMuxer.h
videoCompressor/src/main/cpp/include/: AsyncCallbackInfo.h  VideoRecordBean.h
videoCompressor/src/main/cpp/manager/: VideoRecordManager.cpp  VideoRecordManager.h
videoCompressor/src/main/cpp/muxer/: muxer.cpp  muxer.h
videoCompressor/src/main/cpp/types/libvideocompressor/: index.d.ts  oh-package.json5
videoCompressor/src/main/cpp/video/decoder/: VideoDec.cpp  VideoDec.h
videoCompressor/src/main/cpp/video/encoder/: VideoEnc.cpp  VideoEnc.h
videoCompressor/src/main/ets/components/mainpage/: VideoCompressor.ets
